Fix overflow issue.

--- a/src/components/Process/Process.module.scss
+++ b/src/components/Process/Process.module.scss
@@ -19,7 +19,6 @@
 
 .deskresearchCard {
   width: 100%;
-  height: 40rem;
   padding: 2.2rem;
   border-radius: 2rem;
   border: .2rem solid #274fc4;
