--- a/src/components/Productintrosection/ProductIntroSection.module.scss
+++ b/src/components/Productintrosection/ProductIntroSection.module.scss
@@ -34,7 +34,7 @@
     height: 56.8rem;
     opacity: .5;
 
-    margin-right: -50%;
+    margin-right: -45%;
 }
 
 .productImageWrapper {
