--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,6 +15,7 @@
 
  body {
   margin: 0;
+  overflow-x: hidden;
 }
 
 .container {
@@ -25,7 +26,6 @@
   margin: 0 auto;
   background-color: blue; */
   max-width: 1440px;
-  overflow: visible;
 }
 
 .title {
